--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header>
 		<h1>Eli Galoway's Portfolio</h1>
         <h2>A growing showcase of my skills as a code developer.</h2>
-        <img src="images/eliphoto.jpg" alt="Eli Galloway on his motorcycle" height="500px" width = "250px">
+        <img src="eliphoto.jpg" alt="Eli Galloway on his motorcycle" height="500px" width = "250px">
 	</header>
 
     <!-- The nav shows the links to other pages of my website-->
