--- a/contactinfo.html
+++ b/contactinfo.html
@@ -25,7 +25,7 @@
            <a href="credentials.html">Credentials</a> &nbsp; &#9475; &nbsp;
            <a href="projects.html">Projects</a> &nbsp; &#9475; &nbsp;
            <a href="social.html">Social Media</a> &nbsp; &#9475; &nbsp;
-           <a href="contactme.html">Contact Me</a>
+           <a href="contactinfo.html">Contact Me</a>
         </p>
     </nav>
     <!-- Main content area of the webpage-->
